--- a/Todo/Todo/Todo.csproj
+++ b/Todo/Todo/Todo.csproj
@@ -7,4 +7,10 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="NewTodo.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
